Modified some css issue with the map on mobile

--- a/static/css/components/factigis/factigis_frontoffice.scss
+++ b/static/css/components/factigis/factigis_frontoffice.scss
@@ -83,8 +83,8 @@ $factigis_bgColor : ghostwhite;
   }
 
   .factigis_map_div{
-    height: inherit;
-        position: fixed;
+    height: 640px;
+    position: fixed;
   }
 
   .wrapper_factigis {
